# aks-agent-with-governance-toolkit

./: LEARNING.md  README.md
agent/: Dockerfile  README.md  main.py  pyproject.toml
client/: .dockerignore  Dockerfile  README.md  config.example.js  entrypoint.sh  index.html  nginx.conf
k8s/: agent-deployment.yaml  agent-service.yaml  client-deployment.yaml  client-service.yaml
policy/: Dockerfile  README.md  main.py  pyproject.toml
