[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework-core>=1.2.2",
    "agent-framework-foundry>=1.2.2",
    "aiohttp>=3.13.5",
    "azure-ai-projects>=2.1.0",
    "azure-identity>=1.25.3",
    "fastapi[standard]>=0.136.1",
    "openmeteo-requests>=1.7.5",
]
